# whisper-mlx

./: .gitignore  API.md  README.md  bootstrap  code_runner_agent.py  demo_browser_agent.py  flake.nix  install  install-service  llm.py  mirror_agent.py  pyproject.toml  pytest.ini  requirements.txt  run  run-code  run-daemon  run-frontend  run-frontend-tests  run-llm  run-mirror  run-ping  run-tests
daemon/: __init__.py  browser.py  chat.py  config.py  server.py  sessions.py  tools.py
daemon/profiles/: __init__.py  base.py  code_runner.py  general.py  mirror.py
daemon/sync/: __init__.py  auth.py  calendar.py  gmail.py  scheduler.py  storage.py
daemon/tools/: __init__.py  base.py  registry.py
daemon/tools/browser/: __init__.py  browser_analyze_page.py  browser_click.py  browser_get_elements.py  browser_get_text.py  browser_navigate.py  browser_paste_code.py  browser_press_key.py  browser_type_slow.py  browser_wait.py  manager.py  web_search.py
daemon/tools/google/: __init__.py  get_calendar_event.py  get_email.py  search_calendar.py  search_calendar_fts.py  search_emails.py  search_emails_fts.py
daemon/tools/mirror/: __init__.py  data_store.py  get_current_datetime.py  get_linear_issue.py  get_slack_thread.py  list_linear_events.py  list_recent_slack_activity.py  lookup_user.py  run_python.py  search_linear_issues.py  search_slack_messages.py
daemon/tools/ocr/: __init__.py  ocr_document.py
docs/: AUTH.md  api-reference.md  architecture.md  index.md  profiles.md  sessions.md  streaming.md  tools.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/e2e/: app.spec.ts  global-setup.ts  global-teardown.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  tokens.css
frontend/src/api/: client.ts  index.ts  types.ts
frontend/src/components/: ActivityLog.css  ActivityLog.tsx  ChatView.css  ChatView.tsx  CollapsibleResult.css  CollapsibleResult.tsx  CommandPalette.css  CommandPalette.tsx  Layout.css  Layout.tsx  ProfileRail.css  ProfileRail.tsx  SkipLink.css  SkipLink.tsx  ToolsPanel.css  ToolsPanel.tsx  index.ts
frontend/src/hooks/: index.ts  useAppState.ts  useFocusTrap.ts  useLocalStorage.ts  (+1 more)
scripts/: ping_daemon.py
tests/: __init__.py  test_daemon_e2e.py  test_google_sync.py  test_ocr.py  test_queue_race.py
(+3 files in other folders)
